# food-delivery-platform

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20250721091606_create_users_table.sql  20250721091741_create_restaurants_table.sql  20250721091850_create_orders_table.sql
services/delivery-service/: Cargo.toml
services/restaurant-service/: Cargo.toml
services/user-service/: Cargo.toml
services/user-service/src/: lib.rs
services/user-service/src/controllers/: controllers.rs  mod.rs
services/user-service/src/models/: models.rs
services/user-service/src/repository/: repository.rs
services/user-service/src/service/: service.rs
shared/auth/: Cargo.toml
shared/auth/src/: lib.rs
shared/auth/src/guards/: guards.rs  mod.rs
shared/auth/src/jwt/: jwt.rs
shared/common/: Cargo.toml
shared/common/src/: lib.rs
shared/common/src/errors/: errors.rs
shared/common/src/metrics/: metrics.rs  middleware.rs  mod.rs  ordermetrics.rs
shared/common/src/responses/: mod.rs  responses.rs
shared/common/src/tracing/: tracing.rs
