[package]
name = "shared-common"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
opentelemetry = "0.30.0"
opentelemetry-jaeger = { version = "0.22.0", features = ["collector_client"] }
opentelemetry-otlp = { version = "0.30.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = "0.30.0"
prometheus = "0.14.0"
rocket.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror = "1.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
